feat: backend parcialmente pronto

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,8 +4,10 @@ HOST=localhost
 LOG_LEVEL=info
 APP_KEY=
 NODE_ENV=development
+
+# Database Configuration (PostgreSQL)
 DB_HOST=127.0.0.1
 DB_PORT=5432
-DB_USER=root
-DB_PASSWORD=root
-DB_DATABASE=app
+DB_USER=postgres
+DB_PASSWORD=postgres
+DB_DATABASE=desafio_incuca
