--- a/backend/package.json
+++ b/backend/package.json
@@ -44,12 +44,16 @@
     "@swc/core": "1.11.24",
     "@types/luxon": "^3.7.1",
     "@types/node": "^22.15.18",
+    "@types/supertest": "^6.0.3",
     "eslint": "^9.26.0",
     "hot-hook": "^0.4.0",
     "pino-pretty": "^13.0.0",
     "prettier": "^3.5.3",
+    "supertest": "^7.1.4",
     "ts-node-maintained": "^10.9.5",
-    "typescript": "~5.8"
+    "typescript": "~5.8",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^4.0.15"
   },
   "dependencies": {
     "@adonisjs/auth": "^9.4.0",
